<resources>
    <string name="logo_description">App Logo</string>
    <string name="email_hint">Enter your email</string>
    <string name="password_hint">Enter your password</string>
    <string name="username_hint">Enter your username</string>
    <string name="dob_hint">Select your date of birth</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="register_button">Register</string>
    <string name="calculator">Calculator</string>
    <string name="file_reader">File Reader</string>
    <string name="daily_notes">Daily Notes</string>
    <string name="gps_map_tracker">GPS Map Tracker</string>
    <string name="nav_header_desc">Navigation Header Description</string>
    <string name="nav_header_title">Navigation Header Title</string>
    <string name="nav_header_subtitle">Navigation Header Subtitle</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="action_settings">Settings</string>
    <string name="C">C</string>
    <string name="divide">/</string>
    <string name="multiply">*</string>
    <string name="subtract">-</string>
    <string name="add">+</string>
    <string name="equals">=</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="decimal">.</string>
    <string name="backspace">⌫</string>
    <string name="sign_out">Sign Out</string>
    <string name="app_name">VSGA Test Mobile App</string>
    <string name="add_note">Add Note</string>
    <string name="note_image">Note Image</string>
</resources>
